# revvault

./: .gitignore  .gitleaks.toml  .leakignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix
.claude/rules/: rust.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: backflow-main-into-test.yml  ci.yml  codeql.yml  promotion-gate.yml  tauri-build.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  tui_editor.rs
crates/cli/src/commands/: completions.rs  delete.rs  doctor.rs  edit.rs  export_env.rs  generate.rs  get.rs  init.rs  list.rs  migrate.rs  mod.rs  rotate.rs  search.rs  set.rs  sync.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  crypto.rs  error.rs  identity.rs  init.rs  lib.rs  namespace.rs  store.rs
crates/core/src/import/: mod.rs  plaintext.rs
crates/core/src/rotation/: config.rs  executor.rs  mod.rs  provider.rs  sync_hook.rs
crates/core/src/rotation/providers/: http.rs  local.rs  mod.rs  neon.rs
crates/core/src/sync/: fly.rs  mod.rs  shape.rs  vercel.rs
crates/core/tests/: rotation_integration.rs  store_integration.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: lib.rs  main.rs  state.rs
docs/: INDEX.md  MASTER_PLAN.md  MASTER_SPEC.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  types.ts
frontend/src/components/: CreateSecretDialog.test.tsx  CreateSecretDialog.tsx  RotationPanel.test.tsx  RotationPanel.tsx  SearchBar.test.tsx  SearchBar.tsx  SecretDetail.test.tsx  SecretDetail.tsx  SecretList.test.tsx  SecretList.tsx  SetupScreen.test.tsx  SetupScreen.tsx  Sidebar.test.tsx  Sidebar.tsx
scripts/: check-no-private-leaks.sh  ci.sh
