[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/tauri-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Joshua Vaughn <joshua.v.dev@gmail.com>"]

[workspace.dependencies]
revvault-core = { path = "crates/core" }
age = { version = "0.11", features = ["armor"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
walkdir = "2"
arboard = "3"
toml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
fuzzy-matcher = "0.3"
secrecy = "0.10"
memfd = "0.6"
nix = { version = "0.29", features = ["fs"] }
libc = "0.2"
zeroize = "1"
which = "7"
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = { version = "0.7", features = ["crossterm"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
