[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/tauri-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Joshua Vaughn <joshua.v.dev@gmail.com>"]

[workspace.dependencies]
revvault-core = { version = "0.1", path = "crates/core" }
age = { version = "0.11", features = ["armor"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
walkdir = "2"
arboard = "3"
toml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
fuzzy-matcher = "0.3"
secrecy = "0.10"
memfd = "0.6"
nix = { version = "0.31", features = ["fs"] }
libc = "0.2"
zeroize = "1"
which = "8"
ratatui = "0.30"
crossterm = "0.29"
ratatui-textarea = { version = "0.9", git = "https://github.com/RevealUIStudio/ratatui-textarea", rev = "eeb7f7e37cf03fce57f52494d9fd6b25094b235f", features = ["crossterm"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
