[package]
name = "revault-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for Revault — age-encrypted secret manager"

[[bin]]
name = "revault"
path = "src/main.rs"

[dependencies]
revault-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
arboard = { workspace = true }
secrecy = { workspace = true }
serde_json = { workspace = true }
clap_complete = "4"
tempfile = "3"
