[package]
name = "revvault-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for Revvault — age-encrypted secret manager"

[[bin]]
name = "revvault"
path = "src/main.rs"

[dependencies]
revvault-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
arboard = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
clap_complete = "4"
tempfile = "3"
memfd = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
zeroize = { workspace = true }
which = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
ratatui-textarea = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
age = { workspace = true }
secrecy = { workspace = true }
mockito = "1"
tokio = { workspace = true }
