[package]
name = "revvault-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared vault library for Revvault — age-encrypted secret store"

[dependencies]
async-trait = "0.1"
age = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
fuzzy-matcher = { workspace = true }
secrecy = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
age = { workspace = true }
secrecy = { workspace = true }
mockito = "1"
tokio = { workspace = true }
