[package]
name = "revvault-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tauri desktop app for Revvault"

[lib]
name = "revvault_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "revvault-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
revvault-core = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
arboard = { workspace = true }
secrecy = { workspace = true }
anyhow = { workspace = true }
